test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/delete-trigger-namespace(deprecated)/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: dictionary-1
  namespace: staging
data:
  key: "some value"
