test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/delete-trigger-namespace(deprecated)/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret-1
  namespace: staging
data:
  key: dmFsdWUtMg0KDQo=
