test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/delete-trigger-namespace(deprecated)/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: delete-trigger-namespace
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: namespace.yaml
  - name: step-02
    try:
    - apply:
        file: secret.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mutate-existing-secret
  - name: step-04
    try:
    - apply:
        file: configmap.yaml
  - name: step-05
    try:
    - assert:
        file: patched-secret.yaml
  - name: step-06
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Namespace
          name: staging
  - name: step-07
    try:
    - script:
        content: kubectl get updaterequests -n kyverno
        check:
          # This check ensures the contents of stderr are exactly as shown.
          (trim_space($stderr)): |-
            No resources found in kyverno namespace.
